--- a/contacto/index.html
+++ b/contacto/index.html
@@ -1753,7 +1753,7 @@
                                     <span
                                       class="gdlr-core-icon-list-content"
                                       style="color: #252525"
-                                      >emptedu@gmail.com</span
+                                      >ecmptedu@gmail.com</span
                                     >
                                   </div></a
                                 >
@@ -2081,7 +2081,7 @@
                               <p>
                                 <iframe
                                   style="border: 0"
-                                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3784.577893934499!2d-69.92763575001236!3d18.457464787384158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ea56274023c78c1%3A0x9ecd42a0a5f2a196!2sUNIREMHOS%20-%20Eugenio%20Maria%20de%20Hostos!5e0!3m2!1sen!2sdo!4v1623306314517!5m2!1sen!2sdo"
+                                  src="https://maps.app.goo.gl/1JfYTghwgMQuCPyU8?g_st=ic"
                                   width="100%"
                                   height="400"
                                   allowfullscreen="allowfullscreen"
