--- a/contacto/index.html
+++ b/contacto/index.html
@@ -2081,7 +2081,7 @@
                               <p>
                                 <iframe
                                   style="border: 0"
-                                  src="https://maps.app.goo.gl/1JfYTghwgMQuCPyU8?g_st=ic"
+                                  src="https://www.google.com/maps/dir//ECOLE+MONSEIGNEUR+PIERRE+TOUSSAINT,+1+Delmas+66,+Petion-Ville+6142/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x8eb9e7345687ba9b:0x3ef98e05ff2e0997?sa=X&ved=1t:57443&ictx=111"
                                   width="100%"
                                   height="400"
                                   allowfullscreen="allowfullscreen"
